# komet

./: .gitignore  Cargo.toml  README.md  typst.toml
.github/workflows/: ci.yml  rust.yml
comet/: Cargo.toml
comet-algorithms/src/: Untitled-1.ipynb  boxplot.rs  contour.rs  histogram.rs  lib.rs
comet/src/: lib.rs  read.rs
crates/comet/: Cargo.toml
crates/comet-algorithms/: Cargo.toml
crates/comet-algorithms/src/: boxplot.rs  contour.rs  histogram.rs  lib.rs  linear_system.rs
crates/comet/.cargo/: config.toml
crates/comet/src/: lib.rs  read.rs
crates/komet/: Cargo.toml
crates/komet-plugin/: Cargo.toml
crates/komet-plugin/src/: lib.rs
crates/komet/src/: contour.rs  histogram.rs  lib.rs
src/: boxplot.typ  comet.typ  contour.typ  fft.typ  histogram.typ  linear_system.typ  plugin.typ
tests/: .gitignore
tests/boxplot/: test.typ
tests/contour/: test.typ
tests/fft/: test.typ
tests/histogram/: test.typ
tests/linear_system/: test.typ
