[package]
name = "komet-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
komet = { version = "0.1.0", path = "../komet" }
ciborium = "0.2.2"
ciborium-io = "0.2.2"
ciborium-ll = "0.2.2"
wasm-minimal-protocol = { path = "../../libs/wasm-minimal-protocol" }
rustfft = { version = "5.1.1" }


[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

